--- a/example/example.tex
+++ b/example/example.tex
@@ -1,5 +1,5 @@
 \documentclass{ximera}
-\title{The First Activity}
+\title{Good Morning!}
 \begin{document}
 \begin{abstract}
 This activity deals with \verb!Ximera! activities
