--- a/intro/intro.tex
+++ b/intro/intro.tex
@@ -2,7 +2,7 @@
 \title{Good Morning!}
 \begin{document}
 \begin{abstract}
-“There is nothing more powerful than an idea whose time has come.” - Victor Hugo
+``There is nothing more powerful than an idea whose time has come.`` - Victor Hugo
 \end{abstract}
 \maketitle
 \end{document}
