--- a/empathyMap/empathyMap.tex
+++ b/empathyMap/empathyMap.tex
@@ -2,7 +2,7 @@
 \title{Empathy Maps}
 \begin{document}
 \begin{abstract}
-I am so much emapthy for all everyone and everything.
+``I think we all have empathy. We may not have enough courage to display it.`` - Maya Angelou
 \end{abstract}
 \maketitle
 \end{document}
