--- a/impactMap/impactMap.tex
+++ b/impactMap/impactMap.tex
@@ -2,7 +2,7 @@
 \title{Impact Map}
 \begin{document}
 \begin{abstract}
-In every day, there are 1,440 minutes. That means we have 1,440 daily opportunities to make a positive impact. - Les Brown
+``There is nothing more powerful than an idea whose time has come.`` - Victor Hugo
 \end{abstract}
 \maketitle
 \end{document}
