--- a/intro/intro.tex
+++ b/intro/intro.tex
@@ -2,7 +2,10 @@
 \title{Good Morning!}
 \begin{document}
 \begin{abstract}
-``There is nothing more powerful than an idea whose time has come.`` - Victor Hugo
+``One of the secrets of life is that all that is really worth the doing is what we do for others.`` - Lewis Carroll
 \end{abstract}
 \maketitle
+
+``One of the secrets of life is that all that is really worth the doing is what we do for others.`` - Lewis Carroll
+
 \end{document}
