--- a/agenda/agenda.tex
+++ b/agenda/agenda.tex
@@ -2,7 +2,7 @@
 \title{Our Agenda}
 \begin{document}
 \begin{abstract}
-What the heck are we going to do today????
+``How often I found where I should be going only by setting out for somewhere else.`` - R. Buckminster Fuller
 \end{abstract}
 \maketitle
 \end{document}
