--- a/letsBegin/letsBegin.tex
+++ b/letsBegin/letsBegin.tex
@@ -1,8 +1,7 @@
 \documentclass{ximera}
-\title{Good Morning!}
+\title{Let's Begin}
 \begin{document}
 \begin{abstract}
-This activity deals with \verb!Ximera! activities
 \end{abstract}
 \maketitle
 \end{document}
