--- a/intro/intro.tex
+++ b/intro/intro.tex
@@ -4,6 +4,9 @@
 \begin{abstract}
 ``One of the secrets of life is that all that is really worth the doing is what we do for others.`` - Lewis Carroll
 \end{abstract}
-``One of the secrets of life is that all that is really worth the doing is what we do for others.`` - Lewis Carroll
+
 \maketitle
+
+asfdasdfasdfasdfasdfasd
+
 \end{document}
