--- a/empathyMap/empathyMap.tex
+++ b/empathyMap/empathyMap.tex
@@ -5,4 +5,10 @@
 ``I think we all have empathy. We may not have enough courage to display it.`` - Maya Angelou
 \end{abstract}
 \maketitle
+
+\begin{image}
+\includegraphics{Empathy-Map.png}
+\end{image}
+
+
 \end{document}
