--- a/impactMap/impactMap.tex
+++ b/impactMap/impactMap.tex
@@ -9,4 +9,10 @@
 ``There is nothing more powerful than an idea whose time has come.`` - Victor Hugo
 
 
+
+\begin{image}
+\includegraphics{e_vs_i.jpg}
+\end{image}
+
+
 \end{document}
