--- a/impactMap/impactMap.tex
+++ b/impactMap/impactMap.tex
@@ -6,9 +6,11 @@
 \end{abstract}
 \maketitle
 
-``There is nothing more powerful than an idea whose time has come.`` - Victor Hugo
+\newline
 
+\emph{``There is nothing more powerful than an idea whose time has come.``  {\color{grey}- Victor Hugo}}
 
+\newline
 
 \begin{image}
 \includegraphics{e_vs_i.jpg}
