--- a/impactMap/impactMap.tex
+++ b/impactMap/impactMap.tex
@@ -8,7 +8,7 @@
 
 \newline
 
-\emph{``There is nothing more powerful than an idea whose time has come.``  {\color{grey}- Victor Hugo}}
+\emph{``There is nothing more powerful than an idea whose time has come.`` {\color{grey}- Victor Hugo}}- Victor Hugo
 
 \newline
 
