--- a/impactMap/impactMap.tex
+++ b/impactMap/impactMap.tex
@@ -6,11 +6,11 @@
 \end{abstract}
 \maketitle
 
-\newline
+\linebreak[1]
 
-\emph{``There is nothing more powerful than an idea whose time has come.`` {\color{grey}- Victor Hugo}}- Victor Hugo
+\large{\emph{``There is nothing more powerful than an idea whose time has come.``} {\color{grey}- Victor Hugo}}
 
-\newline
+\linebreak[1]
 
 \begin{image}
 \includegraphics{e_vs_i.jpg}
