--- a/impactMap/impactMap.tex
+++ b/impactMap/impactMap.tex
@@ -8,7 +8,7 @@
 
 \linebreak[1]
 
-\large{\emph{``There is nothing more powerful than an idea whose time has come.``} - Victor Hugo}
+\emph{``There is nothing more powerful than an idea whose time has come.``} - Victor Hugo
 
 \linebreak[1]
 
