--- a/empathyMap/empathyMap.tex
+++ b/empathyMap/empathyMap.tex
@@ -6,7 +6,7 @@
 \end{abstract}
 \maketitle
 
-``I think we all have empathy. We may not have enough courage to display it.`` - Maya Angelou
+\emph{``I think we all have empathy. We may not have enough courage to display it.``} - Maya Angelou
 
 
 \begin{image}
