--- a/intro/intro.tex
+++ b/intro/intro.tex
@@ -7,11 +7,13 @@
 
 \maketitle
 
-``One of the secrets of life is that all that is really worth the doing is what we do for others.`` - Lewis Carroll
+\emph{``One of the secrets of life is that all that is really worth the doing is what we do for others.``} - Lewis Carroll
 
 
 
-
+\begin{image}
+\includegraphics{thankyou.png}
+\end{image}
 
 
 \end{document}
