--- a/agenda/agenda.tex
+++ b/agenda/agenda.tex
@@ -9,4 +9,12 @@
 \emph{``How often I found where I should be going only by setting out for somewhere else.``} - R. Buckminster Fuller
 
 
+\begin{itemize}
+  \Empathy Maps
+  \Impact Maps
+  \Review LearnSmart Master
+  \Solution Generation
+  \Contract Overview
+\end{itemize}
+
 \end{document}
