--- a/agenda/agenda.tex
+++ b/agenda/agenda.tex
@@ -10,11 +10,11 @@
 
 
 \begin{itemize}
-  \Empathy Maps
-  \Impact Maps
-  \Review LearnSmart Master
-  \Solution Generation
-  \Contract Overview
+  \item Empathy Maps
+  \item Impact Maps
+  \item Review LearnSmart Master
+  \item Solution Generation
+  \item Contract Overview
 \end{itemize}
 
 \end{document}
