--- a/agenda/agenda.tex
+++ b/agenda/agenda.tex
@@ -8,13 +8,14 @@
 
 \emph{``How often I found where I should be going only by setting out for somewhere else.``} - R. Buckminster Fuller
 
+Our Agenda
+\begin{easylist}
+  & Empathy Maps
+  & Impact Maps
+  & Review LearnSmart Master
+  & Solution Generation
+  & Contract Overview
+\end{easylist}
 
-\begin{itemize}
-  \item Empathy Maps
-  \item Impact Maps
-  \item Review LearnSmart Master
-  \item Solution Generation
-  \item Contract Overview
-\end{itemize}
 
 \end{document}
