--- a/agenda/agenda.tex
+++ b/agenda/agenda.tex
@@ -9,6 +9,11 @@
 \emph{``How often I found where I should be going only by setting out for somewhere else.``} - R. Buckminster Fuller
 
 Our Agenda
+
+\usepackage{amssymb}
+\ListProperties(Hide=100, Hang=true, Progressive=3ex, Style*=-- ,
+Style2*=$\bullet$ ,Style3*=$\circ$ ,Style4*=\tiny$\blacksquare$ )
+
 \begin{easylist}
 & Empathy Maps
 & Impact Maps
