--- a/agenda/agenda.tex
+++ b/agenda/agenda.tex
@@ -9,18 +9,12 @@
 \emph{``How often I found where I should be going only by setting out for somewhere else.``} - R. Buckminster Fuller
 
 Our Agenda
-
-\usepackage{amssymb}
-\ListProperties(Hide=100, Hang=true, Progressive=3ex, Style*=-- ,
-Style2*=$\bullet$ ,Style3*=$\circ$ ,Style4*=\tiny$\blacksquare$ )
-
-\begin{easylist}
-& Empathy Maps
-& Impact Maps
-& Review LearnSmart Master
-& Solution Generation
-& Contract Overview
-\end{easylist}
-
+\begin{itemize}
+  \item Empathy Maps
+  \item Impact Maps
+  \item Review LearnSmart Master
+  \item Solution Generation
+  \item Contract Overview
+\end{itemize}
 
 \end{document}
