--- a/agenda/agenda.tex
+++ b/agenda/agenda.tex
@@ -9,12 +9,12 @@
 \emph{``How often I found where I should be going only by setting out for somewhere else.``} - R. Buckminster Fuller
 
 Our Agenda
-\begin{itemize}
+\begin{enumerate}
   \item Empathy Maps
   \item Impact Maps
   \item Review LearnSmart Master
   \item Solution Generation
   \item Contract Overview
-\end{itemize}
+\end{enumerate}
 
 \end{document}
