--- a/agenda/agenda.tex
+++ b/agenda/agenda.tex
@@ -6,7 +6,8 @@
 \end{abstract}
 \maketitle
 
-\textcolor{brown}{\emph{``How often I found where I should be going only by setting out for somewhere else.``} - R.} Buckminster Fuller
+\textcolor{brown}{your text...}
+\emph{``How often I found where I should be going only by setting out for somewhere else.``} - R. Buckminster Fuller
 
 Our Agenda
 \begin{enumerate}
